@@ -59,6 +59,17 @@ current locale is used.
     <td valign="top">Whether to halt the build on failure</td>
     <td align="center" valign="top">No, default "true"</td>
   </tr>
+  <tr>
+    <td valign="top">quiet</td>
+    <td valign="top">Do not display a diagnostic message (unless Ant has been 
+    invoked with the <code>-verbose</code> or <code>-debug</code>
+    switches) or modify the exit status to reflect an error. Setting this to 
+    "true" implies setting failonerror to "false".
+      <em>Since Ant 1.7.0.</em>
+    </td>
+    <td align="center" valign="top">No, default "false"</td>
+  </tr>
+
 </table>
 <p>
 The LoadFile task supports nested <a href="../CoreTypes/filterchain.html">
