@@ -29,6 +29,9 @@ Other changes:
 * add dtd to javadoc for junit.
   Bugzilla 40754.
 
+* add quiet attribute to loadfile/resource.
+  Bugzilla 38249.
+
 Changes from Ant 1.7.0Beta3 to Ant 1.7.0RC1
 ===========================================
 
